bugfix: fixing selected Shift

--- a/src/widgets/HeaderResults/ui/styles.module.scss
+++ b/src/widgets/HeaderResults/ui/styles.module.scss
@@ -1,4 +1,5 @@
 .container {
   display: flex;
   gap: 40px;
+  margin-top: 30px;
 }
