--- a/src/widgets/InputTextClikClik/ui/styles.module.scss
+++ b/src/widgets/InputTextClikClik/ui/styles.module.scss
@@ -10,6 +10,8 @@ $font-primary: "Roboto Mono", sans-serif;
 .container {
   font-size: 18px;
   letter-spacing: 2px;
+  margin-top: 100px;
+  margin-bottom: 70px;
 }
 
 .complete_text {
